# 20240823_Nix_Presentation_Bioinformatics_Meetup

./: .gitignore  flake.nix  index.html  package.json  pyproject.toml  style.css
docs/: index.html
docs/assets/: index.0abc8bb8.css
hello_example/: default.nix  result
images/nixR/: Untitled.ipynb  nixR_generated_readme.md at main · TyberiusPrime_nixR.html
images/nixR/nixR_generated_readme.md at main · TyberiusPrime_nixR_files/: element-registry-549421b45ed0.js  script.js  wp-runtime-057b88d5efa8.js
images/repo_size/: Raw repository package counts - Repology.html  Untitled.ipynb  reposize.ipynb  statistics
js/: index.js
md/: index.md
